src/test/ui/issue-40288.stderr
error[E0506]: cannot assign to `*refr` because it is borrowed
  --> $DIR/issue-40288.rs:26:5
   |
LL |     save_ref(&*refr, &mut out);
   |               ----- borrow of `*refr` occurs here
...
LL |     *refr = 3; //~ ERROR cannot assign to `*refr` because it is borrowed
   |     ^^^^^^^^^ assignment to borrowed `*refr` occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
